--- a/interact/notifications.html
+++ b/interact/notifications.html
@@ -1,13 +1,4 @@
-<div class="notification" id="price_update_notice">
-  <h3>🚀 We're Growing With You!</h3>
-  <p>
-    Starting from <strong>September 1st</strong>, our subscription prices will be updated to reflect the powerful new features and improvements we've added to the platform.<br><br>
-    This update isn't about paying more — it's about unlocking more value 💡.<br><br>
-    You'll benefit from smarter analysis, better tools, and an overall enhanced experience 🛠️ — all designed to help you stay ahead in the markets.<br><br>
-    Thank you for being part of our journey! 🙌
-  </p>
-</div>
-
+<!--
 <div class="notification" id="barba_pony_blu">
   <h3>🚀 We're Growing With You!</h3>
   <p>
@@ -17,8 +8,9 @@
     Thank you for being part of our journey! 🙌
   </p>
 </div>
+-->
 
-<div class="notification" id="barba_pony_rosso">
+<!--<div class="notification" id="barba_pony_rosso">
   <h3>📈 New Stocks & Market Indices Are Here!</h3>
   <p>
     We’ve just expanded our coverage with a wide range of <strong>new stocks</strong> and officially added <strong>market indices</strong> to the platform! 🌐<br><br>
@@ -26,4 +18,15 @@
     This is part of our ongoing effort to bring you smarter tools, deeper insights, and a more complete market experience 🛠️.<br><br>
     Thanks for growing with us! 🚀
   </p>
+</div>
+-->
+
+<div class="notification" id="frtarah765" data-target="subscribed">
+  <h3>🚀 Buongiorno abbonato</h3>
+  <p>Contenuto di prova accessibile solo agli abbonati</p>
+</div>
+
+<div class="notification" id="frtarah76508nk" data-target="guest">
+  <h3>🚀 Buongiorno non abbonato</h3>
+  <p>Contenuto di prova accessibile solo ai NON abbonati</p>
 </div>
