--- a/interact/notifications.html
+++ b/interact/notifications.html
@@ -8,9 +8,8 @@
     Thank you for being part of our journey! 🙌
   </p>
 </div>
--->
 
-<!--<div class="notification" id="barba_pony_rosso">
+<div class="notification" id="barba_pony_rosso">
   <h3>📈 New Stocks & Market Indices Are Here!</h3>
   <p>
     We’ve just expanded our coverage with a wide range of <strong>new stocks</strong> and officially added <strong>market indices</strong> to the platform! 🌐<br><br>
@@ -19,7 +18,7 @@
     Thanks for growing with us! 🚀
   </p>
 </div>
--->
+
 
 <div class="notification" id="frtarah765" data-target="subscribed">
   <h3>🚀 Buongiorno abbonato</h3>
@@ -30,3 +29,4 @@
   <h3>🚀 Buongiorno non abbonato</h3>
   <p>Contenuto di prova accessibile solo ai NON abbonati</p>
 </div>
+-->
