--- a/interact/promo.html
+++ b/interact/promo.html
@@ -1,12 +1,18 @@
-<div class="promo"
-     data-active="true"
-     data-maincolor="#FFD700"
-     data-subcolor1="#222222"
-     data-subcolor2="#FFFFFF"
-     data-subcolor3="#7A7A7A"
-     data-expiration="Aug 31"
-     data-name="Summer Promo"
-     data-description="Enjoy all the Premium benefits for 1 month at a special summer price. Then renews at standard monthly rate."
-     data-price="$1.99"
-     data-button="Get Summer Promo - $1.99">
-</div>
+<!DOCTYPE html>
+<html>
+<head><meta charset="UTF-8"></head>
+<body>
+  <div class="promo"
+       data-active="true"
+       data-maincolor="#FFD700"
+       data-subcolor1="#222222"
+       data-subcolor2="#FFFFFF"
+       data-subcolor3="#7A7A7A"
+       data-expiration="Aug 31"
+       data-name="Summer Promo"
+       data-description="Enjoy all the Premium benefits for 1 month at a special summer price. Then renews at standard monthly rate."
+       data-price="$1.99"
+       data-button="Get Summer Promo - $1.99">
+  </div>
+</body>
+</html>
