--- a/interact/promo.html
+++ b/interact/promo.html
@@ -4,8 +4,8 @@
 <body>
   <div class="promo"
        data-active="true"
-       data-maincolor="#FFD700"
-       data-subcolor1="#222222"
+       data-maincolor="#269E82"
+       data-subcolor1="#FFF8E1"
        data-subcolor2="#FFFFFF"
        data-subcolor3="#7A7A7A"
        data-expiration="Aug 31"
