--- a/interact/promo.html
+++ b/interact/promo.html
@@ -5,7 +5,7 @@
   <div class="promo"
        data-active="true"
        data-maincolor="#269E82"
-       data-subcolor1="#FFF8E1"
+       data-subcolor1="#E81C222A"
        data-subcolor2="#FFFFFF"
        data-subcolor3="#7A7A7A"
        data-expiration="Aug 31"
