--- a/interact/promo.html
+++ b/interact/promo.html
@@ -8,7 +8,7 @@
        data-subcolor1="#E81C222A"
        data-subcolor2="#FFFFFF"
        data-subcolor3="#7A7A7A"
-       data-expiration="Aug 31"
+       data-expiration="Until Aug 31"
        data-name="Summer Promo"
        data-description="Enjoy all the Premium benefits for 1 month at a special summer price. Then renews at standard monthly rate."
        data-price="$1.99"
