--- a/interact/promo.html
+++ b/interact/promo.html
@@ -6,7 +6,7 @@
        data-active="true"
        data-maincolor="#269E82"
        data-subcolor1="#E81C222A"
-       data-subcolor2="#FFFFFF"
+       data-subcolor2="#FFD700"
        data-subcolor3="#7A7A7A"
        data-expiration="Until Aug 31"
        data-name="Summer Promo"
