--- a/interact/promo.html
+++ b/interact/promo.html
@@ -1,18 +1,62 @@
 <!DOCTYPE html>
-<html>
-<head><meta charset="UTF-8"></head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Promo Panel</title>
+</head>
 <body>
-  <div class="promo"
-       data-active="true"
-       data-maincolor="#269E82"
-       data-subcolor1="#E81C222A"
-       data-subcolor2="#FFD700"
-       data-subcolor3="#7A7A7A"
-       data-expiration="Until Aug 31"
-       data-name="Summer Promo"
-       data-description="Enjoy all the Premium benefits for 1 month at a special summer price. Then renews at standard monthly rate."
-       data-price="$1.99"
-       data-button="Get Summer Promo - $1.99">
-  </div>
+    <div id="sponsor-panel">
+        <!-- Stato della promo -->
+        <div id="status">
+            <strong>Attivo:</strong> <span id="data-active">true</span>
+        </div>
+
+        <!-- MainColor -->
+        <div id="maincolor-section">
+            <strong>Maincolor:</strong> <span id="data-maincolor">#269E82</span>
+        </div>
+
+        <!-- SubColor1 -->
+        <div id="subcolor1-section">
+            <strong>Subcolor1:</strong> <span id="data-subcolor1">#E81C222A</span>
+        </div>
+
+        <!-- SubColor2 -->
+        <div id="subcolor2-section">
+            <strong>Subcolor2:</strong> <span id="data-subcolor2">#FFD700</span>
+        </div>
+
+        <!-- SubColor3 -->
+        <div id="subcolor3-section">
+            <strong>Subcolor3:</strong> <span id="data-subcolor3">#7A7A7A</span>
+        </div>
+
+        <!-- Expiration -->
+        <div id="title-section">
+            <strong>Expiration:</strong> <span id="data-expiration">Until Aug 31</span>
+        </div>
+
+        <!-- Offer Name -->
+        <div id="name-section">
+            <strong>Name:</strong> <span id="data-name">Summer Promo</span>
+        </div>
+
+      <!-- Description -->
+        <div id="description-section">
+            <strong>Description:</strong> <span id="data-description">Enjoy all the Premium benefits for 1 month at a special summer price. Then renews at standard monthly rate.</span>
+        </div>
+
+        <!-- Price -->
+        <div id="price-secion">
+            <strong>Price:</strong> <span id="data-price">$1.99</span>
+        </div>
+
+        <!-- Button -->
+        <div id="button-section">
+            <strong>Button:</strong> <span id="data-button">Get Summer Promo - $1.99</span>
+        </div>
+
+    </div>
 </body>
 </html>
