--- a/interact/promo.html
+++ b/interact/promo.html
@@ -12,6 +12,11 @@
             <strong>Attivo:</strong> <span id="data-active">true</span>
         </div>
 
+        <!-- ID -->
+        <div id="id">
+            <strong>ID:</strong> <span id="data-id">promo-summer</span>
+        </div>
+        
         <!-- MainColor -->
         <div id="maincolor-section">
             <strong>Maincolor:</strong> <span id="data-maincolor">#269E82</span>
