--- a/interact/promo.html
+++ b/interact/promo.html
@@ -29,12 +29,12 @@
 
         <!-- SubColor2 -->
         <div id="subcolor2-section">
-            <strong>Subcolor2:</strong> <span id="data-subcolor2">#FFD700</span>
+            <strong>Subcolor2:</strong> <span id="data-subcolor2">#FF3B30</span>
         </div>
 
         <!-- SubColor3 -->
         <div id="subcolor3-section">
-            <strong>Subcolor3:</strong> <span id="data-subcolor3">#7A7A7A</span>
+            <strong>Subcolor3:</strong> <span id="data-subcolor3">#E81C222A</span>
         </div>
 
         <!-- Expiration -->
@@ -49,7 +49,7 @@
 
       <!-- Description -->
         <div id="description-section">
-            <strong>Description:</strong> <span id="data-description">Enjoy all the Premium benefits for 1 month at a special summer price. Then renews at standard monthly rate.</span>
+            <strong>Description:</strong> <span id="data-description">Enjoy all the Premium benefits for 2 month at a special summer price. Then renews at standard monthly rate.</span>
         </div>
 
         <!-- Price -->
