--- a/interact/promo.html
+++ b/interact/promo.html
@@ -14,7 +14,7 @@
 
         <!-- ID -->
         <div id="id">
-            <strong>ID:</strong> <span id="data-id">promo-summerrr</span>
+            <strong>ID:</strong> <span id="data-id">promo-summer</span>
         </div>
         
         <!-- MainColor -->
@@ -34,7 +34,7 @@
 
         <!-- SubColor3 -->
         <div id="subcolor3-section">
-            <strong>Subcolor3:</strong> <span id="data-subcolor3">#E81C222A</span>
+            <strong>Subcolor3:</strong> <span id="data-subcolor3">#FFFFFF</span>
         </div>
 
         <!-- Expiration -->
