--- a/interact/promo.html
+++ b/interact/promo.html
@@ -14,7 +14,7 @@
 
         <!-- ID -->
         <div id="id">
-            <strong>ID:</strong> <span id="data-id">promo-summer</span>
+            <strong>ID:</strong> <span id="data-id">premium-weekly</span>
         </div>
         
         <!-- MainColor -->
