--- a/interact/promo.html
+++ b/interact/promo.html
@@ -9,12 +9,12 @@
     <div id="sponsor-panel">
         <!-- Stato della promo -->
         <div id="status">
-            <strong>Attivo:</strong> <span id="data-active">true</span>
+            <strong>Attivo:</strong> <span id="data-active">false</span>
         </div>
 
         <!-- ID -->
         <div id="id">
-            <strong>ID:</strong> <span id="data-id">premium-weekly</span>
+            <strong>ID:</strong> <span id="data-id">promo-summer</span>
         </div>
         
         <!-- MainColor -->
