--- a/interact/promo.html
+++ b/interact/promo.html
@@ -9,7 +9,7 @@
     <div id="sponsor-panel">
         <!-- Stato della promo -->
         <div id="status">
-            <strong>Attivo:</strong> <span id="data-active">false</span>
+            <strong>Attivo:</strong> <span id="data-active">true</span>
         </div>
 
         <!-- ID -->
