--- a/interact/notifications.html
+++ b/interact/notifications.html
@@ -1,3 +1,12 @@
+<div class="notification" id="homer_simpson_028fhjf8">
+  <h3>🌞 So, what do you think about the Summer Promo?</h3>
+  <p>
+    The sun is shining and so are our hottest offers!<br><br>
+    Enjoy a monthly subscription with your first two renewals at a special discounted price.<br><br>
+    For all the details, check out the subscriptions screen in the app. ☀️🔥
+  </p>
+</div>
+
 <!--
 <div class="notification" id="barba_pony_blu">
   <h3>🚀 We're Growing With You!</h3>
